# test_pages

./: CMakeLists.txt  LICENSE  README.md
.github/workflows/: cpp.yaml  deploy.yaml  release.yml
astro_pages/: astro.config.mjs  package-lock.json  package.json
astro_pages/src/components/: message_console.astro  serial_api.astro  side_bar.astro  textbox.astro  toggle_button.astro
astro_pages/src/layouts/: Layout.astro
astro_pages/src/pages/: index.astro
src/: hello.cpp
